--- a/koda/templates/vislice.html
+++ b/koda/templates/vislice.html
@@ -5,8 +5,8 @@
     <p>
         <h2>Poimenuj spojine!</h2>
     </p>
-    {{score}}<br>
-    {{session['napake']}}
+    Točke: {{score}}<br>
+    Napake: {{session['napake']}}
     <p>
     	<form class="form-answer" method="POST">
     	{{ form.hidden_tag() }}
