--- a/koda/static/style.css
+++ b/koda/static/style.css
@@ -24,7 +24,14 @@ p {text-align: center;}
 .left {
   text-align: left;
 }
-p.error {
+
+ul.flash{
+list-style-type:none;
+margin-bottom: 0px;
+padding-left: 0px;
+}
+
+.error {
     color: red;
     background-color: #f3babd;
     padding: 0.2em;
