--- a/koda/templates/vrsta.html
+++ b/koda/templates/vrsta.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     <p>
-        <h3>Izberi naloge!</h3>
+        <h3>Izberi vrsto naloge!</h3>
+        <br>
         <ul>
           {% for moznost in moznosti %}
           <li><a href="{{moznost}}">{{mozni[loop.index0]}}</a></li>
