--- a/koda/templates/razred.html
+++ b/koda/templates/razred.html
@@ -1,5 +1,5 @@
 {% extends "shema.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% import "wtf.html" as wtf %}
 
 {% block content %}
     <div class="center">
