--- a/koda/templates/vislice.html
+++ b/koda/templates/vislice.html
@@ -1,16 +1,21 @@
 {% extends "shema.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% import "wtf.html" as wtf %}
 
 {% block content %}
     <p>
         <h2>Poimenuj spojine!</h2>
     </p>
-    Točke: {{score}}<br>
-    Napake: {{session['napake']}}
+    Pravilni odgovori: {{score}}<br>
+    Napačni odgovori: {{session['napake']}}
     <p>
     	<form class="form-answer" method="POST">
     	{{ form.hidden_tag() }}
         {{spojina|safe}}<br>
+        {%if vrsta%}
+        Vpiši formulo spojine!
+        {%else%}
+        Vpiši ime spojine!
+        {%endif%}
         {{ wtf.form_field(form.o0) }}
         <button class="btn btn-lg btn-primary" type="submit">Naslednja</button>
         </form>
