dodal opise in navodila k nalogam

--- a/koda/templates/domaca_stran.html
+++ b/koda/templates/domaca_stran.html
@@ -11,10 +11,7 @@
   {% endif %}
 {% endwith %}
 <br>
-
-    <p>
-        <h2>Poimenuj spojine!</h2>
-    </p>
+<div id="carousel">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -41,9 +38,10 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
-
-
+</div>
+<br>
+<span class="besedilo"> Smo dijaki drugega letnika Gimnazije Vič in naša letošnja naloga pri projektnem delu v povezavi s kemijo je bila izdelati to spletno stran. Stran je namenjena vsem, ki bi se radi naučili ali pa le pred testom ponavljali formule in imena anorganskih spojin, ki marsikomu predstavljajo težavo. Vedno pravijo, da vaja dela mojstra, zato smo poskrbeli, da imate več kot 800 različnih spojin, razdeljenih po kategorijah in stopnjah zahtevnosti. V zgornji vrstici lahko izbirate med šestimi različnimi kategorijami: binarne spojine, soli oksokislin, kisline, baze, kristalohidrati in hidrogensoli. Pod vsako lahko izbirate med dvema vrstama nalog; lahko je podana formula spojine in je potrebno napisati ime (po Stockovem sistemu ali pa s števniki) ali pa obratno. Za večji izziv pa smo dodali še malo prirejeno igro vislice, kjer so naključno podana imena in formule. Da pa boste lahko svoje kemijsko znanje primerjali s svojimi sošolci, se lahko na stran registrirate in rezultati se vam bodo shranjevali. Najboljših 10 rezultatov si lahko ogledate na strani lestvica, lahko jih sortirate tudi po razredih in kategorijah.</span>
+ 
 
 {{super()}}
 {% endblock %}
