--- a/koda/templates/vislice.html
+++ b/koda/templates/vislice.html
@@ -2,9 +2,7 @@
 {% import "wtf.html" as wtf %}
 
 {% block content %}
-    <p>
-        <h2>Poimenuj spojine!</h2>
-    </p>
+    Najverjetneje že poznaš standardno igro vislice. Tukaj smo naredili nekaj podobnega, le da namesto črk v prazno polje vpisuješ formule in imena anorganskih spojin, odvisno od tega kar je podano. Za vsak pravilen odgovor dobiš eno točko, za vsak napačen odgovor pa se na zaslonu nariše dodatna črta. Izgubiš v primeru, če je napačnih toliko odgovorov, da je figurica 'obešena'.<br>
     Pravilni odgovori: {{score}}<br>
     Napačni odgovori: {{session['napake']}}
     <p>
