--- a/koda/templates/konec.html
+++ b/koda/templates/konec.html
@@ -1,12 +1,13 @@
 {% extends "shema.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% import "wtf.html" as wtf %}
 
 {% block content %}
- <p>
         <h2>KONEC IGRE!</h2>
         <br>
+        <img src="/static/vislice10.png" style="width: 100%; margin-bottom: 2vh; ">
+        <br>
         Dosegel si {{score}} točk!
-        <button class="btn btn-lg btn-primary" type="submit" onClick="window.location.replace(location.pathname);"> Nove spojine</button>
-    </p>
+        <br>
+        <button class="btn btn-lg btn-primary" type="submit" onClick="window.location.replace(location.pathname);"> Začni znova!</button>
 
 {% endblock %}
