odstranil slike, popravil formulo v hs

--- a/koda/templates/vrsta.html
+++ b/koda/templates/vrsta.html
@@ -56,6 +56,6 @@ Pri naslednjih nalogah so napisane formule hidrogensoli. Tvoja naloga je, da pod
 {% elif kategorija=='baze' %}
 <b>Ca(OH)<sub>2</sub></b> - spojino poimenujemo kalcijev hidroksid
 {% else %}
-<b>Rb<sub>2</sub>(<span style="color: red">H</span>SO<sub>3</sub>)<sub>2</sub></b> – spojino poimenujemo <b>rubidijev <span style="color: red">hidrogen</span>sulfat(IV)</b> ali <b>rubidijev <span style="color: red">hidrogen</span>sulfit</b> (po stari nomenklaturi)
+<b>Rb<span style="color: red">H</span>SO<sub>3</sub></b> – spojino poimenujemo <b>rubidijev <span style="color: red">hidrogen</span>sulfat(IV)</b> ali <b>rubidijev <span style="color: red">hidrogen</span>sulfit</b> (po stari nomenklaturi)
 {% endif %}
 {% endblock %}
